<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_height="wrap_content"
    tools:context=".ProfileWindow">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/cardView1"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="250dp"
                android:layout_margin="8dp"
                android:id="@+id/profileImage"
                app:layout_constraintVertical_chainStyle="packed"
                android:layout_gravity="center"
                android:src="@drawable/jack"
                android:layout_height="200dp" />
            <TextView
                android:layout_width="wrap_content"
                android:text="My Profile"
                android:textColor="#000"
                android:textSize="20sp"
                android:padding="4dp"
                android:textStyle="bold|normal"
                app:layout_constraintVertical_chainStyle="packed"
                android:id="@+id/profileName"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#000"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/cardView2"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <TextView
                android:id="@+id/nametV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_nameTV"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:textStyle="bold|normal"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tracknameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/track"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.183"
                app:layout_constraintStart_toEndOf="@+id/mybarrier"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/countryTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/country_tv"
                android:textColor="#000"
                android:textStyle="bold|normal"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/nametV" />

            <TextView
                android:id="@+id/countryET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/countryname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.183"
                app:layout_constraintStart_toEndOf="@+id/mybarrier"
                app:layout_constraintTop_toBottomOf="@+id/tracknameET" />
            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/email_address"
                android:textColor="#000"
                android:textStyle="bold|normal"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/countryTV" />

            <TextView
                android:id="@+id/emailET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/emailadd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.183"
                app:layout_constraintStart_toEndOf="@+id/mybarrier"
                app:layout_constraintTop_toBottomOf="@+id/countryET" />

            <TextView
                android:id="@+id/phoneTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/phone_number_TV"
                android:textColor="#000"
                android:textStyle="bold|normal"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/emailTV" />

            <TextView
                android:id="@+id/phoneET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/phoneconta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.183"
                app:layout_constraintStart_toEndOf="@+id/mybarrier"
                app:layout_constraintTop_toBottomOf="@+id/emailET" />

            <TextView
                android:id="@+id/slackTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/slack_username"
                android:textColor="#000"
                android:textStyle="bold|normal"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/phoneTV" />
            <TextView
                android:id="@+id/slackET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/slackname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.183"
                app:layout_constraintStart_toEndOf="@+id/slackTV"
                app:layout_constraintTop_toBottomOf="@+id/phoneET" />
            <android.support.constraint.Barrier
                android:id="@+id/mybarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="countryTV,slackTV,emailTV,nametV,phoneTV"
                tools:layout_editor_absoluteX="122dp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>